Fix overwrite of vegApp in controller.

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,14 +5,22 @@ $neon: #d0ff00;
 
 
 
+body{
+	margin-top: 0;
+	padding:10px;
+}
 .sidebar{
 background: $teal;
+
 color:$white;
 	width:20%;
-	height:130%;
+	height:200%;
+	margin-top:0;
 padding-top:15%;
 
 	float:left;
+	clear:both;
+
 
 h2{
 	text-align: center;
@@ -44,9 +52,22 @@ h3{
 .main{
 
 	width: 100%;
-	height: 100%;
+	height: 200%;
 	padding-left: 25%;
+	border: 3px solid $teal;
+	border-radius:5px;
 
+
+	h2{
+	padding-top:5%;
+	margin: 0 auto;
+
+	}
+
+}
+
+.itemgroup{
+	display:inline-block;
 }
 .adding_item{
 	width:100%;
@@ -82,6 +103,10 @@ width: 100%;
 	height: 100%;
 	padding-left: 25%;
 text-align:center;
+
+.input{
+	text-align:center;
+}
 	
 
 }
